Bug 1074604 - Handle file "modified" event in MozMtpDatabase and MozMtpServer. r=dhylands, a=bajaj